fixed disqus code

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -50,9 +50,6 @@
         <p class="byline"><strong>{{ page.title }}</strong> was published on <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time>{% if page.modified %} and last modified on <time datetime="{{ page.modified | date: "%Y-%m-%d" }}">{{ page.modified | date: "%B %d, %Y" }}</time>{% endif %}.</p>
       </footer>
     </div><!-- /.article-wrap -->
-  {% if site.owner.disqus-shortname and page.comments == true %}
-    <section id="disqus_thread"></section><!-- /#disqus_thread -->
-  {% endif %}
   </article>
 </div><!-- /#main -->
 
@@ -71,33 +68,13 @@
   </footer>
 </div><!-- /.footer-wrap -->
 
+<div><!-- /.disqus-wrap -->
+  {% if site.owner.disqus-shortname and page.comments == true %}
+    <section style="margin:auto;width:640px;" id="disqus_thread"></section><!-- /#disqus_thread -->
+  {% endif %}
+</div><!-- /.disqus-wrap -->
+
 {% include _scripts.html %}	        
-
- <link rel="canonical" href="http://electronut.in{{ page.url | replace:'index.html','' }}" />
-
-<div style="margin:auto;width:800px;" id="disqus_thread"></div>
-<script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'electronutin'; // your forum shortname
-    var disqus_url = "http://electronut.in{{ page.url | replace:'index.html','' }}";
-
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function() {
-        var dsq = document.createElement('script'); 
-        dsq.type = 'text/javascript'; 
-        dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-    (document.getElementsByTagName('head')[0] 
-      || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-</script>
-
-<noscript>Please enable JavaScript to view the 
-<a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a>
-</noscript>
-
-<a href="http://disqus.com" class="dsq-brlink">comments powered by 
-<span class="logo-disqus">Disqus</span></a>
 
 </body>
 </html>
