--- a/_includes/_scripts.html
+++ b/_includes/_scripts.html
@@ -19,6 +19,16 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 </script>
+
+<!-- Google Search Box -->
+<script language="Javascript" type="text/javascript">
+  function my_search_google()
+  {
+    var query = document.getElementById("my-google-search").value;
+    window.open("http://google.com/search?q=" + query
+	+ "%20site:" + "http://electronut.in");
+  }
+</script>
 {% endif %}
 {% if page.comments %}
   {% include _disqus_comments.html %}
