--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -349,7 +349,7 @@ $button-size: 1.5rem;
 	display: none;
 	.bio-photo {
 		max-width: 110px;
-		@include rounded(150px);
+		//@include rounded(150px);
 	}
 	@media #{$small} {
 		display: block;
@@ -395,7 +395,7 @@ $button-size: 1.5rem;
 		float: left;
 		margin-right: 25px;
 		max-width: 100px;
-		@include rounded(150px);
+		//@include rounded(150px);
 	}
 	.author-social {
 		display: inline-block;
