--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,8 +33,9 @@
     {% include _author-bio.html %}
   </div>
   <div id="index">
+    {{ content }}
     <h3><a href="{{ site.url}}/posts/">Recent Posts</a></h3>
-    {% for post in site.posts limit:5 %}    
+    {% for post in site.posts limit:10 %}    
     <article>
       {% if post.link %}
         <h2 class="link-post"><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> <a href="{{ post.link }}" target="_blank" title="{{ post.title }}"><i class="fa fa-link"></i></h2>
