added paypal donate button

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -48,6 +48,12 @@
           {% include _author-bio.html %}
         </div>
         <p class="byline"><strong>{{ page.title }}</strong> was published on <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time>{% if page.modified %} and last modified on <time datetime="{{ page.modified | date: "%Y-%m-%d" }}">{{ page.modified | date: "%B %d, %Y" }}</time>{% endif %}.</p>
+
+        <!-- paypal donate button -->
+        <div class="paypal-donate">
+          {% include paypal.html %}
+        </div>
+
       </footer>
     </div><!-- /.article-wrap -->
   </article>
