--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -54,6 +54,11 @@
           {% include paypal.html %}
         </div>
 
+        <!-- newsletter signup -->
+        <div class="en-newsl">
+          {% include en-newsl.html %}
+        </div>
+
       </footer>
     </div><!-- /.article-wrap -->
   </article>
