--- a/_includes/en-newsl.html
+++ b/_includes/en-newsl.html
@@ -2,6 +2,7 @@
 <form action="//electronut.us11.list-manage.com/subscribe/post?u=c5ba659a82dd648f86bcdc80a&amp;id=254fce5d73" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
 
+<a name="newsletter"></a>
 <h3>Please sign up for our monthy newsletter</h3>
 
 <p>
