--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,7 +34,7 @@
   </div>
   <div id="index">
     {{ content }}
-    <h3><a href="{{ site.url}}/posts/">Recent Posts</a></h3>
+    <h3><a href="{{ site.url}}/posts/">Recent Blog Posts</a></h3>
     {% for post in site.posts limit:10 %}    
     <article>
       {% if post.link %}
