--- a/_includes/en-newsl.html
+++ b/_includes/en-newsl.html
@@ -3,13 +3,12 @@
     <div id="mc_embed_signup_scroll">
 
 <a name="newsletter"></a>
-<h3>Please sign up for our monthy newsletter</h3>
+<h3>Please sign up for updates</h3>
 
 <p>
-Only once a month, I will send you an email update on 
-the latest electronut.in projects, as well as other 
-related interesting happenings around the globe. 
-Your email address will never be shared or abused, ever.
+Only in a while, I will send you an email update on 
+the latest electronut.in projects and products. Your email 
+address will never be shared or abused, ever.
 </p>
 
 <div class="mc-field-group">
