modified newsletter box

--- a/_includes/en-newsl.html
+++ b/_includes/en-newsl.html
@@ -6,7 +6,7 @@
 <h3>Please sign up for updates</h3>
 
 <p>
-Only in a while, I will send you an email update on 
+Once in a while, I will send you an email update on 
 the latest electronut.in projects and products. Your email 
 address will never be shared or abused, ever.
 </p>
