modified newsletter box

--- a/_includes/en-newsl.html
+++ b/_includes/en-newsl.html
@@ -7,7 +7,7 @@
 
 <p>
 Once in a while, I will send you an email update on 
-the latest electronut.in projects and products. Your email 
+the latest *electronut Labs* projects and products. Your email 
 address will never be shared or abused, ever.
 </p>
 
