got rid of commenting

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -49,6 +49,11 @@
         </div>
         <p class="byline"><strong>{{ page.title }}</strong> was published on <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time>{% if page.modified %} and last modified on <time datetime="{{ page.modified | date: "%Y-%m-%d" }}">{{ page.modified | date: "%B %d, %Y" }}</time>{% endif %}.</p>
 
+        <!-- feedback  -->
+        <div class="feedback">
+          {% include feedback.html %}
+        </div>
+
         <!-- paypal donate button -->
         <div class="paypal-donate">
           {% include paypal.html %}
@@ -85,7 +90,7 @@
   {% endif %}
 </div><!-- /.disqus-wrap -->
 
-{% include _scripts.html %}	        
+{% include _scripts.html %}
 
 </body>
 </html>
