got rid of commenting

--- a/_includes/feedback.html
+++ b/_includes/feedback.html
@@ -4,5 +4,5 @@
 <p>
 I very much appreciate hearing from my readers. Email me at
 <a href="mailto:info@electronut.in">info@electronut.in</a> for questions
-  and comments on this article.
+  or comments on this article.
 </p>
