added zd campaign in posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,7 +31,16 @@ section_id: blog
           We love hearing from our readers. Email us at
           <strong>info@electronut.in</strong> for questions or comments on this article.
           If you found this article useful, please support us by buying some of
-          our hardware products.
+          our Open Source hardware products - like <strong>ZeroDriver</strong> - an
+          Arduino Zero compatible motor driver for robotics. ZeroDriver is
+          crowdfunding right now. Please
+          <a href="https://www.crowdsupply.com/electronut-labs/zerodriver">click here to support our campaign.</a>
+          and bring this product to market!
+
+          <div align="center">
+            <img src ="{{site.url}}/images/home/zd-sm.jpg" />
+          </div>
+
           </p>
           <hr/>
 
