updated with consulting

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,22 +25,25 @@ section_id: blog
           <h3><a href="{{page.url}}">{{page.title}}</a></h3>
           {{ content }}
           <hr/>
+
+          <h4>Consulting</h4>
+
+          <p>
+          Need help with a hardware project or product? Drop us an email at
+          <strong>info@electronut.in</strong>. We offer consulting services on
+          AVR and Nordic nRF BLE - hardware design, firmware development, prototyping,
+          PCB design/assembly, sourcing and manufacturing. We can help you
+          bring your product to market!
+          </p>
+          <hr/>
+
           <h4>Questions/Comments</h4>
 
           <p>
           We love hearing from our readers. Email us at
           <strong>info@electronut.in</strong> for questions or comments on this article.
           If you found this article useful, please support us by buying some of
-          our Open Source hardware products - like <strong>ZeroDriver</strong> - an
-          Arduino Zero compatible motor driver for robotics. ZeroDriver is
-          crowdfunding right now. Please
-          <a href="https://www.crowdsupply.com/electronut-labs/zerodriver">click here to support our campaign.</a>
-          and bring this product to market!
-
-          <div align="center">
-            <img src ="{{site.url}}/images/home/zd-sm.jpg" />
-          </div>
-
+          our hardware products.
           </p>
           <hr/>
 
