--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,6 +37,17 @@ section_id: blog
           </p>
           <hr/>
 
+          <h4>Bluey nRF52 BLE IoT dev board</h4>
+          <div>
+            <img alt="bluey" src ="/images/ads/bluey1.2.jpg">
+          </div>
+
+          Check out our <a href="http://electronut.in/bluey/">Bluey nRF52 BLE development board </a>with
+          built-in Accelerometer/Gyroscope, Temperature/Humidity and Ambient Light sensors.
+          It's a fabulous tool to learn Nordic nRF52 BLE programming and explore IoT technologies.
+
+          <hr/>
+
           <h4>Questions/Comments</h4>
 
           <p>
