bluey beacon post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,7 +39,7 @@ section_id: blog
 
           <h4>Bluey nRF52 BLE IoT dev board</h4>
           <div>
-            <img alt="bluey" src ="/images/ads/bluey1.2.jpg">
+            <img alt="bluey" src ="/images/prod/bluey1.2.jpg">
           </div>
 
           Check out our <a href="http://electronut.in/bluey/">Bluey nRF52 BLE development board </a>with
