--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,10 +17,10 @@
         <h4>Site Map</h4>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="/portfolio/">Portfolio</a></li>
+          <li><a href="/blog/">Blog</a></li>
+          <li><a href="/contact/">Contact</a></li>
+          <li><a href="/about/">About</a></li>
         </ul>
       </div>
       <div class='spacing'></div>
